css/dashboard.css
#container-background {
  width: 100%;
  background-color: #cfe8f3;
  padding: 80px 0;
}

#container {
  max-width: 900px;
  margin: 0 auto;
  padding-bottom: 0px;
}

#dashboard {
  border: 1px solid #b5c9d2;
  border-radius: 10px;
  background-color: #FFF;
  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
}

.indicator {
  /* margin: 0px 15px;
  padding: 15px 0px; */
  border-bottom: 1.5px solid #e8eef1;
  border-spacing: 15px;
}

.indicator:last-child {
  border: 0;
}

.indicator::after {

}

.details {
  display: none;
  margin-bottom: 15px;
}

.show {
  display:block;
}

.summary {
  width: calc(100% - 50px);
  position: relative;
  cursor: pointer;
  margin: 15px 0px;
  font-size: 16px;
}

.summary .summary-name, .summary .summary-measures {
  font-size: 16px;
  line-height: 22px;
}

.summary::after {
  content: "";
  position: absolute;
  width: 100%;
  height: 200%;
  top: -50%;
  right: -40px;
  /* z-index: -1; */
  background-image: url("../img/icon-chevron-down.svg");
  background-repeat: no-repeat;
  background-position-x: 100%;
  background-position-y: 50%;
  background-size: 16px;
}

.summary.checked::after {
  content: "";
  position: absolute;
  width: 100%;
  height: 200%;
  top: -50%;
  left: calc(100% + 25px);
  /* z-index: -1; */
  background-image: url("../img/icon-chevron-down.svg");
  background-repeat: no-repeat;
  background-position-x: 100%;
  background-position-y: 50%;
  background-size: 16px;

  -webkit-transform: rotate(180deg);
  -moz-transform: rotate(180deg);
  -ms-transform: rotate(180deg);
  -o-transform: rotate(180deg);
  transform: rotate(180deg);
}

.trends {
  display: inline-block;
  float: right;
  transform: translateY(-5px);
}

.last-value, .last-date, .change {
  display: inline-block;
  font-size: 16px;
  line-height: 22px;
  text-align: right;
}

.last-value {
  width: 100px;
  margin-right: 15px;
}

.last-date {
  width: 40px;
  margin-right: 15px;
}

.change {
  /* border: 1px solid #b5c9d2; */
  border-radius: 5px;
  width: 80px;
  padding: 5px 5px;
  color: #FFFFFF;
  background-color: #c4c4c4;
}

.last-value, .change {
  font-weight: 700;
}

.change.empty {
  padding: 0 5px;
}

.change.positive {
  color: #55b748;
  background-color: #ddf1da;
}

.change.positive::before {
  content: "";
  position: absolute;
  width: 100%;
  height: 200%;
  /* top: -50%; */
  left: 0;
  /* z-index: -1; */
  background-image: url("../img/arrow-right-up.svg");
  background-repeat: no-repeat;
  background-position-x: calc(100% - 65px);
  background-position-y: 2.5px;
  background-size: 16px;
}

.change.negative {
  color: #db2b27;
  background-color: #f4bfbe;
}

.change.negative::before {
  content: "";
  position: absolute;
  width: 100%;
  height: 200%;
  /* top: -50%; */
  left: 0;
  /* z-index: -1; */
  background-image: url("../img/arrow-right-down.svg");
  background-repeat: no-repeat;
  background-position-x: calc(100% - 65px);
  background-position-y: 2.5px;
  background-size: 16px;
}

/* .summary.checked {
  background-image: url("../img/icon-chevron-down.svg");
  background-repeat: no-repeat;
  background-position-x: calc(100% - 12px);
  background-position-y: 50%;
  background-size: 16px;

  -webkit-transform: rotate(180deg);
  -moz-transform: rotate(180deg);
  -ms-transform: rotate(180deg);
  -o-transform: rotate(180deg);
  transform: rotate(180deg);
} */

.summary .summary-name {
  text-transform: uppercase;
  font-weight: 700;
  margin-right: 10px;
  color: #062635;
}

.summary .summary-measures {
  color: #6a7d86;
}

.description {
  font-style: italic;
  color: #6c838e;
  font-size: 16px;
  line-height: 24px;
  background-color: #e8f4fa;
  border: 1px solid #e8f4fa;
  border-top-left-radius: 10px;
  border-top-right-radius: 10px;
  padding: 20px 25px;
}

.graphs {
  background-color: #f5fafd;
  border: 1px solid #f5fafd;
  border-bottom-left-radius: 10px;
  border-bottom-right-radius: 10px;
}

.graphs {
  padding: 10px 15px;
}

.row {
  margin-bottom: 40px;
}

.graph {
  vertical-align: top;
}

/* .graphs {
  padding: 15px 0px;
}

.graph {
  padding: 0px 20px;
} */

.title {
  font-size: 16px;
  line-height: 21px;
  font-weight: 700;
  color: #062635;
  margin-bottom: 5px;
}

.unit {
  font-size: 14px;
  font-style: italic;
}

.label, .tick text, .source, .source a, .source span, .note span, .note {
  font-size: 14px;
}

 .source, .source a, .source span, .note span, .note {
   line-height: 21px;
 }

.source, .source span, .note span {
  font-weight: 700;
}

.source {
  margin-top: 4px;
  margin-bottom: 4px;
}


@media (max-width: 770px) {

  #container-background {
    padding: 40px 0;
  }

  #container {
    margin: 0 16px;
  }

  .summary {
    margin: 10px 0;
  }

  .summary-name {
    display: block;
    margin-bottom: 4px;
  }

  .summary-measure {
    margin-top: 5px;
  }

  .trends {
    margin-top: 5px;
    float: right;
    display: inline-block;
    transform: translateY(-7px);
  }

  .last-value, .last-date {
    display: none;
  }

  .change {
    font-size: 14px;
    line-height: 18px;
    width: 70px;
    padding: 4px;
  }

  .change.positive::before, .change.negative::before {
    background-position-y: 0;
    background-position-x: calc(100% - 55px);
  }

  .description {
    padding: 10px 15px;
  }

  .row {
    margin-bottom: 0px;
  }

  .graph {
    margin-bottom: 20px;
  }
}

